@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* remove Model.flushSequences()
+	deprecated version is provided
 * added conditions CompositeField.is[Not]Null()
 * removed key in cope.properties: database.oracle.varchar
 * deprecated Pattern.annotationField
